--- a/styles/layout.css
+++ b/styles/layout.css
@@ -26,7 +26,10 @@
     }
 
     .nav {
-        grid-row: 2;
+        /* grid-row: 2;
+        grid-column: 1; */
+        /* figma mockup: */
+        grid-row: 1 / -1;
         grid-column: 1;
     }
 
@@ -37,6 +40,9 @@
     }
 
     .app__header {
-        grid-column: 1 / -1;
+        /* grid-column: 1 / -1; */
+        /* figma mockup: */
+        grid-row: 1;
+        grid-column: 2;
     }
 }
